2009-08-24  Peter Schueller  <ps@kr.tuwien.ac.at>

	* configure.ac: Requiring boost >= 1.37, as it contains the
	important fix https://svn.boost.org/trac/boost/changeset/49234
	to the position_iterator.

2009-08-20  Peter Schueller  <ps@kr.tuwien.ac.at>

	In boost 1.36, the previously (mistakenly) bidirectional
	boost::spirit::position_iterator was changed into a forward
	iterator. This no longer allows to use boost::regex parsers.
	The multi_pass iterator adapter does not work well together
	with the position_iterator, so we can no longer use regex_p.
	* include/dlvhex/HexGrammar.h: Replacing regex_p by direct
	spirit parser constructions, including postprocessing (trim).
	* include/dlvhex/HexGrammar.tcc: Likewise.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* src/dlvhex/DLVresultParserDriver.cpp: Likewise.
	* configure.ac: No longer requiring/handling boost::regex.
	* src/dlvhex/Makefile.am: Likewise.
	* src/testsuite/dlvhex/Makefile.am: Likewise.

2009-07-27  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Fix AC_CONFIG_SUBDIRS bug, see also
	<https://gnunet.org/mantis/view.php?id=1340>.

	* m4/boost.m4: Applied a patch by Benoit Sigoure
	<tsuna@lrde.epita.fr> (boost.m4 maintainer) for the 'xgcc' bug.

2009-07-13  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/DLVresultParserDriver.cpp: Dumping dlv(db) result
	output in debugging verbosity level 4.
	* src/dlvhex/globals.cpp: Likewise.
	* include/dlvhex/globals.h: Likewise.

2009-07-09  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/HexParserDriver.h: Rewriting the parser using
	boost::spirit. Added functionality: ternary operators (prefix
	and infix notation), binary operators (prefix notation), and
	#succ. Fixes: #int handling (previously allowed in rule heads),
	Changed functionality: #namespace syntax (trailing dot).
	* include/dlvhex/DLVresultParserDriver.h: Likewise.
	* include/dlvhex/ParserDriver.h: Likewise.
	* include/dlvhex/ExternalAtom.h: Likewise.