@@ -4,6 +4,11 @@
 	important fix https://svn.boost.org/trac/boost/changeset/49234
 	to the position_iterator.
 
+	* src/dlvhex/PluginContainer.cpp: Added output for plugin
+	searching and loading in verbosity level 4.
+	* include/dlvhex/globals.h: Likewise.
+	* src/dlvhex/globals.cpp: Likewise.
+
 2009-08-20  Peter Schueller  <ps@kr.tuwien.ac.at>
 
 	In boost 1.36, the previously (mistakenly) bidirectional
